--- a/InfiniteTiers.DevicesStore.Presentation/Areas/Identity/Pages/_AuthLayout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Areas/Identity/Pages/_AuthLayout.cshtml
@@ -10,6 +10,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Identity/Account/Login">Login</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Identity/Account/Register">Register</a>
+                    </li>
                 </ul>
             </div>
             <div class="card-content">
@@ -25,4 +28,16 @@
 
 @section Scripts {
     @await RenderSectionAsync("Scripts", required: false)
+
+    <script>
+        $(function () {
+            var current = location.pathname;
+            $('.nav-tabs li a').each(function () {
+                var $this = $(this);
+                if (current.indexOf($this.attr('href')) !== -1) {
+                    $this.addClass('active');
+                }
+            })
+        })
+    </script>
 }
