--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
@@ -16,6 +16,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                Devices
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -24,6 +27,14 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
+            </td>
+            <td>
+                @foreach (var device in item.Devices)
+                {
+                <div>
+                    @Html.DisplayFor(modelItem => device.Name)
+                </div>
+                }
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
