Edit all EF pages to view detials

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Roles/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Roles/Index.cshtml
@@ -16,7 +16,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th></th>
+            <th>
+                Users
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -26,11 +28,19 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.RoleId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.RoleId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.RoleId">Delete</a>
+                @foreach (var user in item.Users)
+                {
+                <div>
+                    @Html.DisplayFor(modelItem => user.FullName)
+                </div>
+                }
             </td>
-        </tr>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.RoleId">Edit</a> |
+                    @*<a asp-action="Details" asp-route-id="@item.RoleId">Details</a> |*@
+                    <a asp-action="Delete" asp-route-id="@item.RoleId">Delete</a>
+                </td>
+            </tr>
 }
     </tbody>
 </table>
