--- a/InfiniteTiers.DevicesStore.Presentation/Views/UserDevices/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/UserDevices/Index.cshtml
@@ -14,6 +14,12 @@
     <thead>
         <tr>
             <th>
+                User
+            </th>
+            <th>
+                Device
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.StartTime)
             </th>
             <th>
@@ -26,6 +32,12 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.User.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Device.Name)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.StartTime)
             </td>
             <td>
@@ -33,7 +45,7 @@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                @*<a asp-action="Details" asp-route-id="@item.Id">Details</a> |*@
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
