Add role to controllers

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -21,14 +21,17 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">ITG Device Store</a>
                 @if (SignInManager.IsSignedIn(User))
                 {
-                    <a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
-                    <a class="navbar-brand" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>
-                    <a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>
 
-                }
-                @if (SignInManager.IsSignedIn(User) && User.IsInRole("om"))
-                {
-                    <a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
+                        <a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>
+                    }
+                    @if (User.IsInRole("Admin") || User.IsInRole("Operation Manager"))
+                    {
+                        <a class="navbar-brand" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>
+                        <a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                    }
                 }
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <partial name="_LoginPartial.cshtml" />
