--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@using InfiniteTiers.DevicesStore.Presentation.Areas.Identity.Data
 
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -24,13 +25,13 @@
 
                     @if (User.IsInRole("Admin"))
                     {
-                        <a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>
-                        <a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>
+                        @*<a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>*@
+                        @*<a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>*@
                     }
                     @if (User.IsInRole("Admin") || User.IsInRole("Operation Manager"))
                     {
-                        <a class="navbar-brand" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>
-                        <a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
+                        @*<a class="navbar-brand" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>*@
+                        @*<a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>*@
                     }
                 }
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
