--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     @if (User.IsInRole("Admin") || User.IsInRole("Operation Manager"))
                     {
                         @*<a class="navbar-brand" asp-area="" asp-controller="Devices" asp-action="Index">Devices</a>*@
-                        @*<a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>*@
+                        <a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>
                     }
                 }
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
