--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_LoginPartial.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_LoginPartial.cshtml
@@ -5,16 +5,18 @@
 @inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
-@if (SignInManager.IsSignedIn(User))
-{
-    <li class="nav-item">
-        <a id="manage" class="nav-link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
-    </li>
-    <li class="nav-item">
-        <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <button id="logout" type="submit" class="nav-link btn btn-link">Logout</button>
-        </form>
-    </li>
-}
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <li class="nav-item">
+            <a id="manage" class="nav-link btn-link text-primary" asp-area="Identity" asp-page="/Account/Manage/Index" title="profile"><i class="fas fa-user-circle fa-2x"></i></a>
+        </li>
+        <li class="nav-item">
+            <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+                <button id="logout" type="submit" class="nav-link btn btn-link text-primary" title="logout">
+                    <i class="fas fa-sign-out-alt fa-2x"></i>
+                </button>
+            </form>
+        </li>
+    }
 
 </ul>
