--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Delete.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Delete.cshtml
@@ -1,75 +1,86 @@
 ﻿@model InfiniteTiers.DevicesStore.Data.Models.Device
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Device";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete Device</h1>
+<h1 class="text-center text-primary">
+    <a asp-action="Index" class="float-left text-dark"><i class="fas fa-long-arrow-alt-left"></i></a>
+    Delete @Model.Name
+</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DeviceId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DeviceId)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Manufacturer)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Manufacturer)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Model)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Model)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SerialNumber)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SerialNumber)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.PurchaseDate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PurchaseDate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Category)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Category.Name)
-        </dd>
+<hr />
+
+<div class="row">
+    <div class="col-lg-6">
+        <h3>Are you sure you want to delete this?</h3>
+    </div>
+    <dl class="col-lg-6">
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Description)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Manufacturer)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Manufacturer)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Model)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Model)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.SerialNumber)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.SerialNumber)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.PurchaseDate)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.PurchaseDate)
+            </dd>
+        </div>
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Category)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Category.Name)
+            </dd>
+        </div>
     </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="DeviceId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="col-lg-6 offset-lg-6">
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="DeviceId" />
+            <input type="submit" value="Delete" class="btn btn-danger btn-block" />
+        </form>
+    </div>
+
+
 </div>
