Edit category Controller as requierments

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model InfiniteTiers.DevicesStore.Data.Models.Device
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Device Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -84,3 +84,10 @@
         </dd>
     </dl>
 </div>
+<style>
+    dt {
+        border-left: 10px solid var(--primary);
+        border-radius: 5px;
+        margin-bottom: 5px;
+    }
+</style>
