--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Delete.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Delete.cshtml
@@ -1,25 +1,38 @@
 ﻿@model InfiniteTiers.DevicesStore.Data.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete Category";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<h1 class="text-center text-primary">
+    <a asp-action="Index" class="float-left text-dark"><i class="fas fa-long-arrow-alt-left"></i></a>
+    Delete @Model.Name
+</h1>
 
-<h3>Are you sure you want to delete this Category?</h3>
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
+<hr />
+
+<div class="row">
+    <div class="col-lg-6">
+        <h3>Are you sure you want to delete this?</h3>
+        <h5 class="text-danger">Caution: @Model.Devices.Count Devices would be deleted!</h5>
+    </div>
+    <dl class="col-lg-6">
+        <div class="row">
+            <dt class="col-sm-3">
+                @Html.DisplayNameFor(model => model.Name)
+            </dt>
+            <dd class="col-sm-9">
+                @Html.DisplayFor(model => model.Name)
+            </dd>
+        </div>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="CategoryId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+
+    <div class="col-lg-6 offset-lg-6">
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="CategoryId" />
+            <input type="submit" value="Delete" class="btn btn-danger btn-block" /> 
+        </form>
+    </div>
+
 </div>
