--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Details.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Details.cshtml
@@ -1,45 +1,53 @@
 ﻿@model InfiniteTiers.DevicesStore.Data.Models.Category
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Category Details";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Category Details</h1>
+<h1 class="text-center text-primary">
+    <a asp-action="Index" class="float-left text-dark"><i class="fas fa-long-arrow-alt-left"></i></a>
+    @Html.DisplayFor(model => model.Name)
+    <a asp-action="Edit" asp-route-id="@Model.CategoryId" class="float-right text-dark"><i class="fas fa-edit fa-s"></i></a>
+</h1>
+
 <hr />
 <div>
     <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryId)
+        <dt class="col-md-2">
+            Id
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-4">
             @Html.DisplayFor(model => model.CategoryId)
         </dd>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-md-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-4">
             @Html.DisplayFor(model => model.Name)
         </dd>
-    </dl>
-    <dl class="row">
-        <dt class="col-sm-2">
+        <dt class="col-md-2">
             Devices
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-4">
             @foreach (var device in Model.Devices)
             {
                 <div>
                     @device.Name
                 </div>
-                <hr />
+                if (!device.Equals(Model.Devices.Last()))
+                {
+                    <hr />
+                }
             }
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.CategoryId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+
+<style>
+    dt {
+        border-left: 10px solid var(--primary);
+        border-radius: 5px;
+        margin-bottom: 5px;
+    }
+</style>
