--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Edit.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Edit.cshtml
@@ -1,34 +1,44 @@
 ﻿@model InfiniteTiers.DevicesStore.Data.Models.Category
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Category";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1 class="text-center text-primary">
+    <a asp-action="Index" class="float-left text-dark"><i class="fas fa-long-arrow-alt-left"></i></a>
+    @Model.Name
+</h1>
 
-<h4>Category</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="CategoryId" />
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+    <form asp-action="Edit" class="col-md-12">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="CategoryId" />
+
+        <div class="row">
+            <div class="col-lg-4 offset-lg-4">
+                <div class="form-group">
+                    <label asp-for="Name" class="control-label"></label>
+                    <input asp-for="Name" class="form-control" />
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+        </div>
+
+        <hr />
+
+        <div class="row">
+            <div class="col-lg-4 offset-lg-4">
+                <div class="form-group">
+                    <input type="submit" value="Save" class="btn btn-primary btn-block" />
+                </div>
             </div>
-        </form>
-    </div>
+        </div>
+
+    </form>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
