--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
@@ -1,16 +1,13 @@
 ﻿@model IEnumerable<InfiniteTiers.DevicesStore.Data.Models.Category>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Categories";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Categories</h1>
+<h1 class="text-center text-primary">All Categories</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -19,7 +16,12 @@
             <th>
                 #Devices
             </th>
-            <th></th>
+            <th>
+                <a asp-action="Create" class="text-decoration-none">
+                    <i class="fas fa-plus"></i>
+                    NEW!
+                </a>
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -33,11 +35,26 @@
                     @item.Devices.Count
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                    <a asp-action="Edit" asp-route-id="@item.CategoryId" style="padding: 0px 5px; margin:0px 3px">
+                        <i class="fas fa-edit"></i>
+                    </a>
+                    <a asp-action="Details" asp-route-id="@item.CategoryId" style="padding: 0px 5px; margin:0px 3px">
+                        <i class="fas fa-info"></i>
+                    </a>
+                    <a asp-action="Delete" asp-route-id="@item.CategoryId" style="padding: 0px 5px; margin:0px 3px">
+                        <i class="far fa-trash-alt"></i>
+                    </a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+<style>
+    td, th {
+        text-align: center;
+    }
+
+    a:hover {
+        text-decoration: none;
+    }
+</style>
