--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -29,12 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-primary" asp-area="" asp-controller="Devices" asp-action="Index" style="font-size:x-large">Devices</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-primary" asp-area="" asp-controller="Categories" asp-action="Index" style="font-size:x-large">Categories</a>
+                        </li>
                         @*<a class="navbar-brand" asp-area="" asp-controller="Users" asp-action="Index">Users</a>*@
                         @*<a class="navbar-brand" asp-area="" asp-controller="UserDevices" asp-action="Index">User Devices History</a>*@
-                    }
-                    @if (User.IsInRole("Admin") || User.IsInRole("Operation Manager"))
-                    {
-                        @*<a class="navbar-brand" asp-area="" asp-controller="Categories" asp-action="Index">Categories</a>*@
                     }
                 }
             </ul>
