normal user can see devices owner

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
@@ -24,7 +24,7 @@
         </dt>
         <dd class="col-md-4">
             <i>
-                @ViewData["User"]
+                @Html.DisplayFor(model => model.OwnedBy)
             </i>
         </dd>
         <dt class="col-md-2">
