--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
@@ -25,13 +25,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Manufacturer)
-            </th>
-            <th>
-                Category
-            </th>
-            <th>
-                Purchase Date
+                Owned By
             </th>
             <th>
                 Status
@@ -57,13 +51,7 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Manufacturer)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PurchaseDate.Year)/@Html.DisplayFor(modelItem => item.PurchaseDate.Month)/@Html.DisplayFor(modelItem => item.PurchaseDate.Day)
+                    @Html.DisplayFor(modelItem => item.OwnedBy)
                 </td>
                 <td>
                     @if (item.IsActive)
