move idenity classes to data layer

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<InfiniteTiers.DevicesStore.Data.Models.Device>
 
 @using Microsoft.AspNetCore.Identity
-@using InfiniteTiers.DevicesStore.Presentation.Areas.Identity.Data
+@using InfiniteTiers.DevicesStore.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
