--- a/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using InfiniteTiers.DevicesStore.Presentation.Areas.Identity.Data
+@using InfiniteTiers.DevicesStore.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
