--- a/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/History.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/TransactionsHistory/History.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<InfiniteTiers.DevicesStore.Presentation.Areas.Identity.Data.UserDevice>
+﻿@model IEnumerable<InfiniteTiers.DevicesStore.Data.Models.UserDevice>
 
 @{
     ViewData["Title"] = "Devices";
