fix device owner bug

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Details.cshtml
@@ -24,7 +24,7 @@
         </dt>
         <dd class="col-md-4">
             <i>
-                @Html.DisplayFor(model => model.OwnedBy)
+                @Html.DisplayFor(model => model.OwnedBy.UserName)
             </i>
         </dd>
         <dt class="col-md-2">
