Edit delete bug in category

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Categories/Index.cshtml
@@ -49,6 +49,11 @@
         }
     </tbody>
 </table>
+
+@if (Model.Count() < 1)
+{
+    <h4 class="text-center text-danger">No Categories.</h4>
+}
 <style>
     td, th {
         text-align: center;
