fix delete bug in device controller

--- a/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
+++ b/InfiniteTiers.DevicesStore.Presentation/Views/Devices/Index.cshtml
@@ -122,6 +122,10 @@
         }
     </tbody>
 </table>
+@if (Model.Count() < 1)
+{
+    <h4 class="text-center text-danger">No Devices.</h4>
+}
 <style>
     td, th {
         text-align: center;
